# Magnificent-Solitude

./: .gitignore  CMakeLists.txt  README.md
include/: mag_sol.hpp
logs/: parse_db.py
